// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDisabledCard > renders the disabled auth state with the dev dashboard action 1`] = `
<DocumentFragment>
  <div
    class="relative z-10 flex w-full max-w-md flex-col items-center gap-5"
  >
    <a
      class="flex min-h-11 items-center gap-3 rounded-[var(--radius)] px-2"
      href="/"
    >
      <span
        class="flex h-10 w-10 shrink-0 items-center justify-center rounded-lg bg-primary text-primary-foreground shadow-[var(--shadow-button)]"
      >
        <svg
          class="lucide lucide-rocket h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"
          />
          <path
            d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"
          />
          <path
            d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"
          />
          <path
            d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
          />
        </svg>
      </span>
      <span
        class="text-xl font-bold leading-tight gradient-text"
      >
        Slothing
      </span>
    </a>
    <div
      class="rounded-[var(--radius)] border-[length:var(--border-width)] bg-card text-card-foreground [backdrop-filter:var(--backdrop-blur)] w-full shadow-[var(--shadow-elevated)]"
    >
      <div
        class="flex flex-col p-6 space-y-3 text-center"
      >
        <div
          class="mx-auto flex h-11 w-11 items-center justify-center rounded-[var(--radius)] bg-destructive/10 text-destructive"
        >
          <svg
            class="lucide lucide-triangle-alert h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
            />
            <path
              d="M12 9v4"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </div>
        <h3
          class="text-2xl font-semibold leading-none [letter-spacing:var(--letter-spacing)] [text-transform:var(--text-transform)]"
        >
          Sign-in is disabled in this environment
        </h3>
        <p
          class="text-sm text-muted-foreground [letter-spacing:var(--letter-spacing)] inline-flex flex-wrap justify-center gap-x-1"
        >
          <span>
            This Slothing instance is running without Google OAuth credentials. Missing:
          </span>
          <code>
            GOOGLE_CLIENT_ID
          </code>
          <span>
            ,
          </span>
          <code>
            GOOGLE_CLIENT_SECRET
          </code>
          <span>
            ,
          </span>
          <code>
            NEXTAUTH_SECRET
          </code>
          <span>
            . See
          </span>
          <code>
            .env.example
          </code>
          <span>
            .
          </span>
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-4 text-center"
      >
        <a
          class="inline-flex items-center justify-center whitespace-nowrap rounded-[var(--radius)] text-sm font-medium [letter-spacing:var(--letter-spacing)] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [box-shadow:var(--shadow-button)] bg-primary text-primary-foreground hover:bg-primary/90 h-11 px-4 py-2 w-full"
          href="/en/dashboard"
        >
          Continue to dashboard (dev mode)
        </a>
      </div>
    </div>
    <a
      class="inline-flex min-h-11 items-center gap-2 text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
      href="/"
    >
      <svg
        class="lucide lucide-arrow-left h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m12 19-7-7 7-7"
        />
        <path
          d="M19 12H5"
        />
      </svg>
      Back to home
    </a>
  </div>
</DocumentFragment>
`;

exports[`SignInCard > renders the Vercel-style Google-only state 1`] = `
<DocumentFragment>
  <div
    class="relative z-10 flex w-full max-w-md flex-col items-center gap-5"
  >
    <a
      class="flex min-h-11 items-center gap-3 rounded-[var(--radius)] px-2"
      href="/"
    >
      <span
        class="flex h-10 w-10 shrink-0 items-center justify-center rounded-lg bg-primary text-primary-foreground shadow-[var(--shadow-button)]"
      >
        <svg
          class="lucide lucide-rocket h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"
          />
          <path
            d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"
          />
          <path
            d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"
          />
          <path
            d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
          />
        </svg>
      </span>
      <span
        class="text-xl font-bold leading-tight gradient-text"
      >
        Slothing
      </span>
    </a>
    <div
      class="rounded-[var(--radius)] border-[length:var(--border-width)] bg-card text-card-foreground [backdrop-filter:var(--backdrop-blur)] w-full shadow-[var(--shadow-elevated)]"
    >
      <div
        class="flex flex-col p-6 space-y-2 text-center"
      >
        <h3
          class="text-2xl font-semibold leading-none [letter-spacing:var(--letter-spacing)] [text-transform:var(--text-transform)]"
        >
          Sign in to Slothing
        </h3>
        <p
          class="text-sm text-muted-foreground [letter-spacing:var(--letter-spacing)]"
        >
          Continue with Google to keep going.
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-4"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-[var(--radius)] text-sm font-medium [letter-spacing:var(--letter-spacing)] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [box-shadow:var(--shadow-button)] border-[length:var(--border-width)] border-primary bg-transparent text-primary hover:bg-primary hover:text-primary-foreground h-11 px-4 py-2 w-full gap-2"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-4 w-4"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
            />
            <path
              d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
            />
            <path
              d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
            />
            <path
              d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
            />
          </svg>
          Sign in with Google
        </button>
      </div>
    </div>
    <div
      class="space-y-3 text-center"
    >
      <p
        class="text-xs text-muted-foreground"
      >
        By continuing, you agree to our 
        <a
          class="font-medium text-primary underline"
          href="/terms"
        >
          Terms of Service
        </a>
         and 
        <a
          class="font-medium text-primary underline"
          href="/privacy"
        >
          Privacy Policy
        </a>
        .
      </p>
      <a
        class="inline-flex min-h-11 items-center gap-2 text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
        href="/"
      >
        <svg
          class="lucide lucide-arrow-left h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignInCard > submits a Resend magic link and renders the confirmation state 1`] = `
<DocumentFragment>
  <div
    class="relative z-10 flex w-full max-w-md flex-col items-center gap-5"
  >
    <a
      class="flex min-h-11 items-center gap-3 rounded-[var(--radius)] px-2"
      href="/"
    >
      <span
        class="flex h-10 w-10 shrink-0 items-center justify-center rounded-lg bg-primary text-primary-foreground shadow-[var(--shadow-button)]"
      >
        <svg
          class="lucide lucide-rocket h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"
          />
          <path
            d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"
          />
          <path
            d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"
          />
          <path
            d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
          />
        </svg>
      </span>
      <span
        class="text-xl font-bold leading-tight gradient-text"
      >
        Slothing
      </span>
    </a>
    <div
      class="rounded-[var(--radius)] border-[length:var(--border-width)] bg-card text-card-foreground [backdrop-filter:var(--backdrop-blur)] w-full shadow-[var(--shadow-elevated)]"
    >
      <div
        class="flex flex-col p-6 space-y-2 text-center"
      >
        <h3
          class="text-2xl font-semibold leading-none [letter-spacing:var(--letter-spacing)] [text-transform:var(--text-transform)]"
        >
          Sign in to Slothing
        </h3>
        <p
          class="text-sm text-muted-foreground [letter-spacing:var(--letter-spacing)]"
        >
          Continue with Google or get a magic link by email.
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-4"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-[var(--radius)] text-sm font-medium [letter-spacing:var(--letter-spacing)] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [box-shadow:var(--shadow-button)] border-[length:var(--border-width)] border-primary bg-transparent text-primary hover:bg-primary hover:text-primary-foreground h-11 px-4 py-2 w-full gap-2"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-4 w-4"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
            />
            <path
              d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
            />
            <path
              d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
            />
            <path
              d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
            />
          </svg>
          Sign in with Google
        </button>
        <div
          class="flex items-center gap-3 text-xs text-muted-foreground"
        >
          <span
            class="h-px flex-1 bg-border"
          />
          <span>
            or
          </span>
          <span
            class="h-px flex-1 bg-border"
          />
        </div>
        <form
          class="space-y-3"
        >
          <div
            class="space-y-2"
          >
            <label
              class="text-sm font-medium leading-none [letter-spacing:var(--letter-spacing)] peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              for="email"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="flex h-11 w-full rounded-[var(--radius)] border-[length:var(--border-width)] border-input bg-background px-3 py-2 text-sm [letter-spacing:var(--letter-spacing)] ring-offset-background file:border-[length:0] file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
              id="email"
              placeholder="you@example.com"
              required=""
              type="email"
              value=""
            />
          </div>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap rounded-[var(--radius)] text-sm font-medium [letter-spacing:var(--letter-spacing)] ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [box-shadow:var(--shadow-button)] bg-primary text-primary-foreground hover:bg-primary/90 h-11 px-4 py-2 w-full gap-2"
            type="submit"
          >
            <svg
              class="lucide lucide-mail h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
              <path
                d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
              />
            </svg>
            Send magic link
          </button>
        </form>
      </div>
    </div>
    <div
      class="space-y-3 text-center"
    >
      <p
        class="text-xs text-muted-foreground"
      >
        By continuing, you agree to our 
        <a
          class="font-medium text-primary underline"
          href="/terms"
        >
          Terms of Service
        </a>
         and 
        <a
          class="font-medium text-primary underline"
          href="/privacy"
        >
          Privacy Policy
        </a>
        .
      </p>
      <a
        class="inline-flex min-h-11 items-center gap-2 text-sm font-medium text-muted-foreground transition-colors hover:text-foreground"
        href="/"
      >
        <svg
          class="lucide lucide-arrow-left h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
        Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;
